<resources>
    <string name="app_name">LittleStudio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="enter_title">Title</string>
    <string name="enter_description">Tell us about your character!</string>
    <string name="enter_invitation_code">Enter the invitation code"</string>
    <string name="my_gallery">My Gallery</string>
    <string name="my_page">My Family</string>

    <string name="title">LittleStudio</string>
    <string name="fullName">Full name</string>
    <string name="id">ID</string>
    <string name="pw">Password</string>
    <string name="confirmPw">Confirm your password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="yesAccount">Already have an account?</string>
    <string name="parentChild">Parent/Child</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
</resources>